# Hydra

./: .gitignore  .travis.yml  LICENSE.txt  README.md  requirements.txt  run_all_tests.py
docker/: Dockerfile
examples/ERC20/: ABI  ERC20.v.py  README.md
examples/ERC20/nonviper/: ERC20_solidity_1.sol  ERC20_solidity_2.sol
examples/ERC20/test/: .erc20_tests_1.py.swp  erc20_hydra_test.py  erc20_test_gas_costs.py  erc20_tests_1.py  erc20_tests_2.py  test_config.py
examples/MintableERC20/: Hydra.sol  Spec.sol
examples/MintableERC20/heads/: ERC20_florian.se  ERC20_florian.sol
examples/MintableERC20/test/: __init__.py  erc20_hydra_test.py  erc20_test_florian.py
examples/MontyHall/: spec.rst
examples/MontyHall/heads/: MontyHall_florian.se  MontyHall_florian.sol  MontyHall_lorenz.sol
examples/MontyHall/test/: __init__.py  differential_test.py  mh_head_test.py  mh_hydra_test.py  test_utils.py  utils.py
examples/SimpleERC20/: Hydra.sol  Spec.sol
examples/SimpleERC20/heads/: ERC20_florian.se  ERC20_florian.sol  ERC20_lorenz.sol  ERC20_phil.vy  ERC20_serpent.se  ERC20_solidity_1.sol  ERC20_solidity_2.sol  ERC20_viper.vy  ERC20_vyper.vy
examples/SimpleERC20/test/: __init__.py  erc20_hydra_test.py  erc20_test_florian.py  erc20_test_gas_costs.py  erc20_test_phil.py  external.sol
examples/SimpleMontyHall/: Hydra.sol  Spec.sol
examples/SimpleMontyHall/heads/: MontyHall_florian.se  MontyHall_florian.sol
examples/SimpleMontyHall/test/: __init__.py  mh_head_test.py  mh_hydra_test.py  utils.py
examples/TestArray/: test.py  test_array.se  test_array.sol  test_array.vy
hydra/: README.md
hydra/instrumenter/: .gitignore  README.md  instrumenter.cabal  package.yaml  stack.yaml
hydra/instrumenter/app/: Main.hs  WhileTestProgs.hs
hydra/instrumenter/src/: Util.hs
hydra/instrumenter/src/EVM/: Address.hs  Bytecode.hs  BytecodePlus.hs  GenericInitcode.hs  Instrumentation.hs  While.hs
hydra/instrumenter/src/EVM/Instrumentation/: Common.hs  HeadN.hs  HeadOne.hs  Internal.hs  Metacontract.hs
hydra/instrumenter/src/EVM/While/: Macros.hs
hydra/instrumenter/test/: Spec.hs
hydra/metacontract/: Hydra.sol  jump_template.txt
hydra/test/: calculate_instrumenter_stats.py  test_hydra.py  test_instrumenter_coverage.py  test_while.py  utils.py
hydra/test/assets/: EquivalenceHead1.sol  External.sol  ExternalDistort.sol  Head1.sol  Head2.sol
scripts/: setup_testenv.bash
submarine_sends/to_contract/: README.md  add_initcode.py  clone_withdraw.easm  forwarder.easm  gascosts.md  genesis-myrtle.json  initcode_header.easm  receiver.sol
utils/: deployment.py  pyethereum_test_utils.py  rpc_deployment.py
