name:                instrumenter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/assembler#readme
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EVM.Bytecode
                     , EVM.BytecodePlus
                     , EVM.GenericInitcode
                     , EVM.Instrumentation
                     , EVM.Instrumentation.Internal
                     , EVM.Instrumentation.Metacontract
                     , EVM.While
  other-modules:       EVM.While.Macros
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , containers
                     , cryptonite
                     , parsec
                     , relapse >= 1.0.0.0
                     , text
  default-language:    Haskell2010

executable instrumenter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , instrumenter
                     , text
  default-language:    Haskell2010

executable whiletestprogs-exe
  hs-source-dirs:      app
  main-is:             WhileTestProgs.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , instrumenter
                     , text
  default-language:    Haskell2010

test-suite instrumenter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , instrumenter
                     , bytestring
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/assembler
